--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -14,12 +14,14 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
+        android:fitsSystemWindows="true"
         android:layout_height="200dp">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbarLayout"
             app:contentScrim="?colorPrimary"
             app:expandedTitleTextColor="@color/white"
+            android:fitsSystemWindows="true"
             app:collapsedTitleTextColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -29,6 +31,7 @@
                 android:id="@+id/detailsPoster"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:fitsSystemWindows="true"
                 android:contentDescription="Movie title image"
                 android:scaleType="centerCrop"
                 android:transitionName="moviePoster"
@@ -49,6 +52,8 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/details_content" />
+    <include
+        android:fitsSystemWindows="true"
+        layout="@layout/details_content" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
