--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -61,6 +61,7 @@
 
                 <TextView
                     android:id="@+id/title"
+                    android:transitionName="moviePoster"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?textAppearanceHeadline6"
