--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -14,38 +14,36 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:fitsSystemWindows="true"
-        android:layout_height="200dp">
+        android:layout_height="250dp"
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbarLayout"
-            app:contentScrim="?colorPrimary"
-            app:expandedTitleTextColor="@color/white"
-            android:fitsSystemWindows="true"
-            app:collapsedTitleTextColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:collapsedTitleTextColor="@color/white"
+            app:contentScrim="?colorPrimary"
+            app:expandedTitleTextColor="@color/white"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/detailsPoster"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:fitsSystemWindows="true"
                 android:contentDescription="Movie title image"
+                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:transitionName="moviePoster"
+                android:transitionName="detailsPoster"
                 app:layout_collapseMode="parallax"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@tools:sample/avatars" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
-                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
+                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                 app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -53,7 +51,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
-        android:fitsSystemWindows="true"
-        layout="@layout/details_content" />
+        layout="@layout/details_content"
+        android:fitsSystemWindows="true" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
