--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -20,11 +20,10 @@
             <ImageView
                 android:id="@+id/poster"
                 android:layout_width="100dp"
+                android:transitionName="detailsPoster"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
                 android:contentDescription="@string/movie_poster_content_description"
                 android:scaleType="centerCrop"
-                android:transitionName="moviePoster"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +60,6 @@
 
                 <TextView
                     android:id="@+id/title"
-                    android:transitionName="moviePoster"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?textAppearanceHeadline6"
